# hawkeye

./: Cargo.toml  Dockerfile  README.md  api.Dockerfile  worker.Dockerfile
.github/workflows/: rust.yml
fixtures/: watcher.json
hawkeye-api/: Cargo.toml
hawkeye-api/src/: auth.rs  config.rs  filters.rs  handlers.rs  main.rs  templates.rs
hawkeye-core/: Cargo.toml
hawkeye-core/src/: models.rs
hawkeye-worker/: Cargo.toml
hawkeye-worker/src/: actions.rs  img_detector.rs  main.rs  metrics.rs  video_stream.rs
src/: actions.rs  config.rs  examples_common.rs  img_detector.rs  main.rs  metrics.rs  models.rs  video_stream.rs
