[package]
name = "hawkeye"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cbsinteractive/hawkeye"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
glib = "0.10.1"
gstreamer = "0.16.2"
gstreamer-app = "0.16.0"
gstreamer-video = "0.16.0"
derive_more = "0.99.9"
dssim = "2.11.2"
load_image = { version = "2.12.1", features = ["static"] }
imgref = "1.7.0"
structopt = "0.3.17"
reqwest = { version = "0.10", features = ["blocking", "json"] }
color-eyre = "0.5.1"
pretty_env_logger = "0.4.0"
log = "0.4"

