[package]
name = "hawkeye-worker"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cbsinteractive/hawkeye"


[dependencies]
hawkeye-core = { path = "../hawkeye-core" }
image = "0.23"
glib = "0.10.1"
gstreamer = "0.16.2"
gstreamer-app = "0.16.0"
gstreamer-video = "0.16.0"
derive_more = "0.99.9"
dssim = "2.11"
load_image = { version = "2.12", features = ["static"] }
imgref = "1.7"
structopt = "0.3"
color-eyre = "0.5"
pretty_env_logger = "0.4"
log = "0.4"
ureq = "1.4"
serde_json = "1.0"
ctrlc = { version = "3.1", features = ["termination"] }
prometheus = "0.10.0"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

[dev-dependencies]
sn_fake_clock = "0.4"
mockito = "0.27"
